[package]
name = "mpp-server"
version = "0.1.0"
authors = ["JellyBrick <shlee1503@naver.com>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
unicode-segmentation = "1.6.0"
actix = "0.10.0-alpha.3"
actix-rt = "1.1.1"
actix-web = "3.0.0-beta.3"
actix-web-actors = "3.0.0-beta.1"
byteorder = "1.3.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }